create language changer component

--- a/index.html
+++ b/index.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
     <link rel="icon" href="/favicon1.ico">
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="">
+    <link rel="icon" type="image/png" sizes="32x32" href="">
+    <link rel="icon" type="image/png" sizes="60x60" href="">
+    <link rel="icon" type="image/png" sizes="144x144" href="">
+    <link rel="apple-touch-icon" sizes="16x16" href="">
+    <link rel="apple-touch-icon" sizes="32x32" href="">
+    <link rel="apple-touch-icon" sizes="60x60" href="">
+    <link rel="apple-touch-icon" sizes="144x144" href=""> -->
+
+    <link rel="apple-touch-icon" href="apple-icon.png">
+    <link rel="canonical" href="https://www.yoursite.com/page">
+
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexGenLabs | Viral Marketing & Drive Sales</title>
+    <meta name="description" content="We create engaging short videos for TikTok, Instagram Reels, YouTube, and more to promote products, advertise businesses, and drive audience engagement.">
+    <meta name="robots" content="index, follow">
+    <meta property="og:site_name" content="NexGenLabs">
+    <meta property="og:title" content="Viral Marketing & Drive Sales | NexGenLabs">
+    <meta property="og:description" content="We create engaging short videos for TikTok, Instagram Reels, YouTube, and more to promote products, advertise businesses, and drive audience engagement.">
+    <meta property="og:image" content="https://www.yoursite.com/image.jpg">
+    <meta property="og:url" content="https://www.yoursite.com">
+    <meta property="og:type" content="website">
+    <meta name="twitter:title" content="Viral Marketing & Drive Sales | NexGenLabs">
+    <meta name="twitter:description" content="We create engaging short videos for TikTok, Instagram Reels, YouTube, and more to promote products, advertise businesses, and drive audience engagement.">
+    <meta name="twitter:image" content="https://www.yoursite.com/image.jpg">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@nexgenlabs">
+    <meta name="twitter:creator" content="@nexgenlabs">
+
+    <title>Viral Marketing & Drive Sales | NexGenLabs</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "NexGenLabs",
+        "logo": "pake yang icon 144px"
+        "image": "https://www.yoursite.com/image.jpg",
+        "url": "https://www.yoursite.com",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "123 Main St",
+          "addressLocality": "City",
+          "addressRegion": "State",
+          "postalCode": "12345",
+          "addressCountry": "Country"
+        },
+        "telephone": "+1234567890",
+        "sameAs": [
+          "https://www.facebook.com/yourpage",
+          "https://twitter.com/yourpage"
+        ]
+      }
+      </script>
   </body>
 </html>
