add robots and sitemap

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <link rel="icon" href="/favicon1.ico">
     <!-- <link rel="icon" type="image/png" sizes="16x16" href="">
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href=""> -->
 
     <link rel="apple-touch-icon" href="apple-icon.png">
-    <link rel="canonical" href="https://www.yoursite.com/page">
+    <link rel="canonical" href="https://nexgenlabs.vercel.app/">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,13 +22,14 @@
     <meta property="og:title" content="Viral Marketing & Drive Sales | NexGenLabs">
     <meta property="og:description" content="We create engaging short videos for TikTok, Instagram Reels, YouTube, and more to promote products, advertise businesses, and drive audience engagement.">
     <meta property="og:image" content="https://www.yoursite.com/image.jpg">
-    <meta property="og:url" content="https://www.yoursite.com">
+    <meta property="og:url" content="https://nexgenlabs.vercel.app/">
     <meta property="og:type" content="website">
     <meta name="twitter:title" content="Viral Marketing & Drive Sales | NexGenLabs">
     <meta name="twitter:description" content="We create engaging short videos for TikTok, Instagram Reels, YouTube, and more to promote products, advertise businesses, and drive audience engagement.">
     <meta name="twitter:image" content="https://www.yoursite.com/image.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@nexgenlabs">
+    <meta name="twitter:url" content="https://nexgenlabs.vercel.app/">
     <meta name="twitter:creator" content="@nexgenlabs">
 
     <title>Viral Marketing & Drive Sales | NexGenLabs</title>
@@ -43,16 +44,16 @@
         "name": "NexGenLabs",
         "logo": "pake yang icon 144px"
         "image": "https://www.yoursite.com/image.jpg",
-        "url": "https://www.yoursite.com",
+        "url": "https://nexgenlabs.vercel.app/",
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "123 Main St",
-          "addressLocality": "City",
-          "addressRegion": "State",
+          "streetAddress": "Jl. Keluarga No. 36, Kec. Palmerah",
+          "addressLocality": "Jakarta Barat",
+          "addressRegion": "Jakarta",
           "postalCode": "12345",
-          "addressCountry": "Country"
+          "addressCountry": "Indonesia"
         },
-        "telephone": "+1234567890",
+        "telephone": "+628117765886",
         "sameAs": [
           "https://www.facebook.com/yourpage",
           "https://twitter.com/yourpage"
